# VehicleDynamics

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py  setup.sh
data/: __init__.py  fetch.py  fetch_gui.py  parsing.py  parsing_gui.py
docs/: api_reference.md  dynamics_model.md  fitting_guide.md  getting_started.md  inverse_model.md
examples/: basic_simulation.py  custom_vehicle.py  feedforward_gui_usage.py  fit_from_data.py  gui_usage.py  inverse_feedforward.py
fitting/: __init__.py  feedforward_gui.py  feedforward_gui_settings.json  fitter.py  gui.py  gui_settings.json
scripts/: feedforward_compare_gui.py  feedforward_trip.py  fetch_trips.py  fetch_trips_gui.py  fit_params.py  parse_trips.py  parse_trips_gui.py  simulate_trip.py
simulation/: __init__.py  dynamics.py  feedforward_controller.py  inverse_dynamics.py
tests/: __init__.py  conftest.py  test_data_parsing.py  test_dynamics.py  test_feedforward_controller.py  test_feedforward_gui.py  test_fitting.py  test_inverse_dynamics.py  test_simulation.py
utils/: __init__.py  capabilities.py  data_utils.py  randomization.py
