[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vehicle-simulation"
version = "1.0.0"
description = "Vehicle dynamics simulation and parameter fitting"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "torch>=2.0.0",
    "pandas>=1.3.0",
    "boto3>=1.20.0",
    "matplotlib>=3.4.0",
    "tqdm>=4.62.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
]

[project.scripts]
fetch-trips = "scripts.fetch_trips:main"
parse-trips = "scripts.parse_trips:main"
fit-params = "scripts.fit_params:main"
simulate-trip = "scripts.simulate_trip:main"
feedforward-trip = "scripts.feedforward_trip:main"
feedforward-compare-gui = "scripts.feedforward_compare_gui:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
